--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,8 +18,10 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # of the product and file versions while build-number is used as the build suffix.
 version: 1.0.0+1
 
+
 environment:
-  sdk: ^3.6.0
+  sdk: ">=3.6.0 <4.0.0"
+  flutter: ">=3.29.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -27,8 +29,8 @@ environment:
 # dependencies can be manually updated by changing the version numbers below to
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
-dependency_overrides:
-  intl: ^0.19.0
+# dependency_overrides:
+#   intl: ^0.19.0
 
 dependencies:
   flutter:
@@ -38,33 +40,34 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   dio: ^5.7.0
-  dio_cache_interceptor: ^3.5.1
+  dio_cache_interceptor: ^4.0.3
   easy_localization: ^3.0.7+1
   easy_localization_loader: ^2.0.2
   flutter_launcher_icons: ^0.14.3
   flutter_map: ^8.1.1
   flutter_map_cancellable_tile_provider: ^3.1.0
   flutter_map_compass: ^1.1.0
-  flutter_map_location_marker: ^10.0.0
+  flutter_map_location_marker: ^10.1.0
   flutter_map_marker_cluster:
     git:
       url: https://github.com/lpongetti/flutter_map_marker_cluster
-      ref: 8155bcf556f43cf107044989aa3ee4cef9c1d084
+      ref: aec4cc186f9367d81925ecf909f638489c491539
   flutter_settings_screens: ^0.3.4
   flutter_svg: ^2.0.17
-  geoengine: ^1.0.3
-  geolocator: ^13.0.2
+  geolocator: ^14.0.0
   latlong2: ^0.9.1
   logger: ^2.5.0
   maps_launcher: ^3.0.0+1
   path: ^1.9.0
   path_provider: ^2.1.5
-  permission_handler: ^11.3.1
+  permission_handler: ^12.0.0+1
   url_launcher: ^6.3.1
   uuid: ^4.5.1
   vector_graphics: ^1.1.18
   vector_graphics_compiler: ^1.1.16
   package_info_plus: ^8.3.0
+  geoxml: ^2.6.1
+  file_picker: ^10.1.2
 
 dev_dependencies:
   flutter_test:
@@ -92,6 +95,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - src/resources/tests/
     - src/resources/langs/
     - src/resources/icons/symbols/amenity/
     - src/resources/icons/symbols/shop/
