--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,11 @@ dependencies:
   vector_graphics: ^1.1.18
   vector_graphics_compiler: ^1.1.16
   package_info_plus: ^8.3.0
+  
+  # Code push dependencies
+  flutter_eval: ^0.8.1
+  dart_eval: ^0.8.1
+  eval_annotation: ^0.7.0
 
 dev_dependencies:
   flutter_test:
